k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gymapp
  namespace: gymapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gymapp
  template:
    metadata:
      labels:
        app: gymapp
    spec:
      containers:
        - name: gymapp
          image: imanishpr/decentralised-gym:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
