k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gymapp
  namespace: gymapp
spec:
  type: ClusterIP
  selector:
    app: gymapp
  ports:
    - name: http
      port: 80
      targetPort: 8080
