k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gymapp
  namespace: gymapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: gymapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gymapp
                port:
                  number: 80
